<resources>
    <string name="app_name">Qiscus Chat</string>
    <string name="qiscus_chat_app">Qiscus Chat App</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="start">Start</string>
    <string name="loading">Loading...</string>
    <string name="contacts">Contacts</string>
    <string name="new_chat">New Chat</string>
    <string name="log_out">log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message</string>
</resources>